more example stuff

--- a/webroot/templates-hidden/default.html
+++ b/webroot/templates-hidden/default.html
@@ -55,10 +55,7 @@
     <!-- Bootstrap core JavaScript
 	 ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <footer>
-        <hr>
-	<center>	<p>© <a href="http://www.mkrrf-it.com">MKRRF-IT </a> 2013</p> </center>
-      </footer><script src="/static/js/jquery.js"></script>
+    <script src="/static/js/jquery.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
   
 
