--- a/webroot/templates-hidden/default.html
+++ b/webroot/templates-hidden/default.html
@@ -33,7 +33,7 @@
     <!-- Example row of columns -->
     <div class="jumbotron">
         <div class="container">
-          <h1>CloServe Example</h1>
+          <h3>CloServe Examples</h3>
           
           
         </div>
