--- a/webroot/ajax-and-comet.html
+++ b/webroot/ajax-and-comet.html
@@ -12,9 +12,9 @@
 
       
 
-      <div class="container"><div class="row"><section><h4>Ajax form and Comet example</h4><p>The &quot;Ajax form&quot; in closerve is in fact implemented with websocket, but we keep the lift:form.ajax tag to have better prtability of HTML code.</p><p>Here is an example of using form.ajax and comet to make a very simple chat app.</p><p>First, define some data structures for bookkeeping:</p><code><pre>(def chat-chans (atom #{}))
+      <div class="container"><div class="row"><section><h4>Ajax form and Comet example</h4><p>The &quot;Ajax form&quot; in closerve is in fact implemented with websocket, but we keep the lift:form.ajax tag to have better prtability of HTML code.</p><p>Here is an example of using form.ajax and comet to make a very simple chat app.</p><p>First, define some data structures for bookkeeping:</p><pre><code>(def chat-chans (atom #{}))
 (def chat-msgs (atom []))
-</pre></code><p>Then we need a processing fuction for ajax.form which takes user input:</p><code><pre>(register-cmd-proc-fn 
+</code></pre><p>Then we need a processing fuction for ajax.form which takes user input:</p><pre><code>(register-cmd-proc-fn 
  &quot;ChatInput&quot;
  [context cmd]
  (let [chat-msg (cmd &quot;chatmsg&quot;)]
@@ -29,12 +29,12 @@
      ))
  )
 
-</pre></code><p>Distribute the input msg to all comet channels, kind of like the comet actor server in Lift:</p><code><pre>(add-watch chat-msgs :watch-chat-msgs
+</code></pre><p>Distribute the input msg to all comet channels, kind of like the comet actor server in Lift:</p><pre><code>(add-watch chat-msgs :watch-chat-msgs
            (fn [key aref old-val new-val]
              (if new-val 
                (doseq [c @chat-chans]
                  (go (&gt;! c (last new-val)))))))
-</pre></code><p>Now the comet actor which read input from its channel and send update to browser:</p><code><pre>(register-comet-fn
+</code></pre><p>Now the comet actor which read input from its channel and send update to browser:</p><pre><code>(register-comet-fn
  &quot;chat&quot;
  [ch req page-id uuid]
  (swap! chat-chans conj ch)
@@ -49,13 +49,18 @@
  (prn &quot;chat channel is closed&quot;)
  (swap! chat-chans disj ch)
 )
-</pre></code><p>The corresponding HTML code:</p><code><pre>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;
+</code></pre><p>The corresponding HTML code:</p><pre><code>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;
 &lt;/ul&gt;
 &lt;form class=&quot;lift:form.ajax?callback=ChatInput&quot;&gt;
 &lt;input type=&quot;text&quot; name=&quot;chatmsg&quot;&gt;
 &lt;input type=&quot;submit&quot;&gt;
 &lt;/form&gt;
-</pre></code><div><p>Try it here:</p><div class="well"><ul class="lift:comet?type=chat" id="msglist"></ul><form class="lift:form.ajax?callback=ChatInput"><input type="text" name="chatmsg" placeholder=""><input type="submit"></form></div></div></section></div></div>
+</code></pre><div><p>Try it here:</p><div class="well"><ul class="lift:comet?type=chat" id="msglist"></ul><span><form class="input-group lift:form.ajax?callback=ChatInput">
+<input name="chatmsg" type="text" class="form-control">
+      <span class="input-group-btn">
+        <input value="Go!" class="btn btn-default" type="submit">
+      </span>
+</form></span></div></div></section></div></div>
 
 
       <!-- Example row of columns -->
