--- a/webroot/templates-hidden/default.html
+++ b/webroot/templates-hidden/default.html
@@ -33,11 +33,11 @@
     <!-- Example row of columns -->
     <div class="jumbotron">
         <div class="container">
-          <h3>CloServe Examples</h3>
+          <h1>CloServe <small> A view first web framework in Clojure</small></h1>
           
           
         </div>
-      </div><div class="container" id="container"><div class="row"><div class="col-lg-2"><ul><li><a href="/">LazyLoad</a></li><li><a href="/ajax-and-comet">Ajax and Comet</a></li></ul></div><div class="col-lg-10">
+      </div><div class="container" id="container"><div class="row"><div class="col-lg-2"><ul class="nav nav-pills nav-stacked"><li class=""><a href="/">Home</a></li><li><a data-toggle="dropdown" class="dropdown-toggle">Examples <span class="caret"></span></a> <ul class="dropdown-menu"><li><a class="" href="/lazyload">LazyLoad</a></li><li><a href="/ajax-and-comet">Ajax and Comet</a></li><li><a href="/rest">REST</a></li></ul></li></ul></div><div class="col-lg-10">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div id="content">
