--- a/webroot/templates-hidden/default.html
+++ b/webroot/templates-hidden/default.html
@@ -37,7 +37,7 @@
           
           
         </div>
-      </div><div class="container" id="container"><div class="row"><div class="col-lg-2"><ul class="nav nav-pills nav-stacked"><li class=""><a href="/">Home</a></li><li><a data-toggle="dropdown" class="dropdown-toggle">Examples <span class="caret"></span></a> <ul class="dropdown-menu"><li><a class="" href="/lazyload">LazyLoad</a></li><li><a href="/ajax-and-comet">Ajax and Comet</a></li><li><a href="/generate-ajax-form">Generate Ajax form with Snippet</a></li><li><a href="/rest">REST</a></li><li class=""><a href="https://github.com/zhaojw/closerve-example">Download</a></li></ul></li><li class=""><a href="https://github.com/zhaojw/closerve">Download</a></li></ul></div><div class="col-lg-10">
+      </div><div class="container" id="container"><div class="row"><div class="col-lg-2"><ul class="nav nav-pills nav-stacked"><li class=""><a href="/">Home</a></li><li><a data-toggle="dropdown" class="dropdown-toggle">Examples </a> <ul class="dropdown-menu"><li><a class="" href="/lazyload">LazyLoad</a></li><li><a href="/ajax-and-comet">Ajax and Comet</a></li><li><a href="/generate-ajax-form">Generate Ajax form with Snippet</a></li><li><a href="/rest">REST</a></li><li class=""><a href="https://github.com/zhaojw/closerve-example">Download</a></li></ul></li><li class=""><a href="https://github.com/zhaojw/closerve">Download</a></li></ul></div><div class="col-lg-10">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div id="content">
