corr escaped html code

--- a/webroot/lazyload.html
+++ b/webroot/lazyload.html
@@ -22,9 +22,8 @@
      )
  )
 </code></pre><p>Wrap the long loading snippet with a lift:LazyLoad snippet:</p><pre><code>&lt;span class=&quot;lift:LazyLoad&quot;&gt;
-  &lt;:span class=&quot;lift:TestSlowLoad&quot;&gt;&gt;
-&lt;/span&gt;
-</code></pre><div><p>Result:</p><div class="well"><span class="lift:LazyLoad"><span class="lift:TestSlowLoad"></span></span></div></div></section></div></div>
+    &lt;span class=&quot;lift:TestSlowLoad&quot;&gt;&lt;/span&gt;
+&lt;/span&gt;</code></pre><div><p>Result:</p><div class="well"><span class="lift:LazyLoad"><span class="lift:TestSlowLoad"></span></span></div></div></section></div></div>
 
 
       <!-- Example row of columns -->
