--- a/webroot/ajax-and-comet.html
+++ b/webroot/ajax-and-comet.html
@@ -50,13 +50,14 @@
  (prn &quot;chat channel is closed&quot;)
  (swap! chat-chans disj ch)
 )
-</code></pre><p>The corresponding HTML code:</p><pre><code>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;
-&lt;/ul&gt;
-&lt;form class=&quot;lift:form.ajax?callback=ChatInput&quot;&gt;
-&lt;input type=&quot;text&quot; name=&quot;chatmsg&quot;&gt;
-&lt;input type=&quot;submit&quot;&gt;
-&lt;/form&gt;
-</code></pre><div><p>Try it here:</p><div class="well"><ul class="lift:comet?type=chat" id="msglist"></ul><span><form class="input-group lift:form.ajax?callback=ChatInput">
+</code></pre><p>The corresponding HTML code:</p><pre><code>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;&lt;/ul&gt;
+
+&lt;form class=&quot;input-group lift:form.ajax?callback=ChatInput&quot;&gt;
+      &lt;input name=&quot;chatmsg&quot; type=&quot;text&quot; class=&quot;form-control&quot;&gt;
+      &lt;span class=&quot;input-group-btn&quot;&gt;
+        &lt;input value=&quot;Go!&quot; class=&quot;btn btn-default&quot; type=&quot;submit&quot;&gt;
+      &lt;/span&gt;
+&lt;/form&gt;</code></pre><div><p>Try it here:</p><div class="well"><ul class="lift:comet?type=chat" id="msglist"></ul><span><form class="input-group lift:form.ajax?callback=ChatInput">
 <input name="chatmsg" type="text" class="form-control">
       <span class="input-group-btn">
         <input value="Go!" class="btn btn-default" type="submit">
