--- a/webroot/generate-ajax-form.html
+++ b/webroot/generate-ajax-form.html
@@ -31,13 +31,14 @@
                       :html htmltxt
                       }))
  )
-</code></pre><p>The corresponding HTML code:</p><pre><code>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;
-&lt;/ul&gt;
-&lt;form class=&quot;lift:form.ajax?callback=ChatConfirm&quot;&gt;
-&lt;input type=&quot;hide&quot; name=&quot;ppp&quot;&gt;
-&lt;input value=&quot;Join Chat!&quot; type=&quot;submit&quot;&gt;
-&lt;/form&gt;
-</code></pre><div><p>Try it here:</p><div class="well"><ul class="lift:comet?type=chat" id="msglist"></ul><span><form class="input-group lift:form.ajax?callback=ChatConfirm">
+</code></pre><p>The corresponding HTML code:</p><pre><code>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;&lt;/ul&gt;
+
+&lt;form class=&quot;input-group lift:form.ajax?callback=ChatConfirm&quot;&gt;
+      &lt;input name=&quot;ppp&quot; type=&quot;hidden&quot; class=&quot;&quot;&gt;
+      &lt;span class=&quot;input-group-btn&quot;&gt;
+        &lt;input value=&quot;Join Chat!&quot; class=&quot;btn btn-default&quot; type=&quot;submit&quot;&gt;
+      &lt;/span&gt;
+&lt;/form&gt;</code></pre><div><p>Try it here:</p><div class="well"><ul class="lift:comet?type=chat" id="msglist"></ul><span><form class="input-group lift:form.ajax?callback=ChatConfirm">
 <input name="ppp" type="hidden" class="">
       <span class="input-group-btn">
         <input value="Join Chat!" class="btn btn-default" type="submit">
