--- a/webroot/rest.html
+++ b/webroot/rest.html
@@ -14,7 +14,7 @@
 
       <div class="container"><div class="row"><section><h4>REST in CloServe</h4><p>To make REST style http calls, you can use the register-dyna-action micro, for eg:
 
-<pre><code>
+</p><pre class="prettyprint lang-clojure"><code>
 (ns ...
  (:require [ring.util.response :as response] 
 ...)
@@ -25,7 +25,7 @@
  (response/response (str &quot;sum = &quot; (+ (Long. op1) (+ (Long. op2 ))))))
 
 </code></pre>
-</p><p>Test it here: <a href="/sum/12345/54321">/sum/12345/54321</a></p><p></p></section></div></div>
+<p></p><p>Test it here: <a href="/sum/12345/54321">/sum/12345/54321</a></p><p></p></section></div></div>
 
 
       <!-- Example row of columns -->
