--- a/webroot/ajax-and-comet.html
+++ b/webroot/ajax-and-comet.html
@@ -12,9 +12,9 @@
 
       
 
-      <div class="container"><div class="row"><section><h4>Ajax form and Comet example</h4><p>The &quot;Ajax form&quot; in closerve is in fact implemented with websocket, but we keep the lift:form.ajax tag to have better prtability of HTML code.</p><p>Here is an example of using form.ajax and comet to make a very simple chat app.</p><p>First, define some data structures for bookkeeping:</p><pre><code>(def chat-chans (atom #{}))
+      <div class="container"><div class="row"><section><h4>Ajax form and Comet example</h4><p>The &quot;Ajax form&quot; in closerve is in fact implemented with websocket, but we keep the lift:form.ajax tag to have better prtability of HTML code.</p><p>Here is an example of using form.ajax and comet to make a very simple chat app.</p><p>First, define some data structures for bookkeeping:</p><pre class="prettyprint lang-clojure"><code>(def chat-chans (atom #{}))
 (def chat-msgs (atom []))
-</code></pre><p>Then we need a processing fuction for ajax.form which takes user input:</p><pre><code>(register-cmd-proc-fn 
+</code></pre><p>Then we need a processing fuction for ajax.form which takes user input:</p><pre class="prettyprint lang-clojure"><code>(register-cmd-proc-fn 
  &quot;ChatInput&quot;
  [context cmd]
  (let [chat-msg (cmd &quot;chatmsg&quot;)]
@@ -30,12 +30,12 @@
      ))
  )
 
-</code></pre><p>Distribute the input msg to all comet channels, kind of like the comet actor server in Lift:</p><pre><code>(add-watch chat-msgs :watch-chat-msgs
+</code></pre><p>Distribute the input msg to all comet channels, kind of like the comet actor server in Lift:</p><pre class="prettyprint lang-clojure"><code>(add-watch chat-msgs :watch-chat-msgs
            (fn [key aref old-val new-val]
              (if new-val 
                (doseq [c @chat-chans]
                  (go (&gt;! c (last new-val)))))))
-</code></pre><p>Now the comet actor which read input from its channel and send update to browser:</p><pre><code>(register-comet-fn
+</code></pre><p>Now the comet actor which read input from its channel and send update to browser:</p><pre class="prettyprint lang-clojure"><code>(register-comet-fn
  &quot;chat&quot;
  [ch req page-id uuid]
  (swap! chat-chans conj ch)
@@ -50,7 +50,7 @@
  (prn &quot;chat channel is closed&quot;)
  (swap! chat-chans disj ch)
 )
-</code></pre><p>The corresponding HTML code:</p><pre><code>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;&lt;/ul&gt;
+</code></pre><p>The corresponding HTML code:</p><pre class="prettyprint lang-html"><code>&lt;ul class=&quot;lift:comet?type=chat&quot;&gt;&lt;/ul&gt;
 
 &lt;form class=&quot;input-group lift:form.ajax?callback=ChatInput&quot;&gt;
       &lt;input name=&quot;chatmsg&quot; type=&quot;text&quot; class=&quot;form-control&quot;&gt;
