--- a/webroot/templates-hidden/default.html
+++ b/webroot/templates-hidden/default.html
@@ -56,7 +56,7 @@
 	 ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script><script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   
 
 </body></html>
