tune script position

--- a/webroot/conditional-activiate.html
+++ b/webroot/conditional-activiate.html
@@ -21,7 +21,7 @@
  )
 </code></pre><p>And attach this snippet to google analytics script:</p><pre class="prettyprint lang-html"><code>&lt;script class=&quot;lift:ActiveIfIsMkrrf&quot;&gt;
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=....
-&lt;/script&gt;</code></pre><div><p>Ok, now if you download from github this example code and try it on your machine, it will not send google analytical script to the browser.</p><p>One can use the same method to hide/show login, logout buttons for eg.</p><p>I used the same snippet to wrap a disqus code piece here as well.</p></div></section></div></div>
+&lt;/script&gt;</code></pre><div><p>Ok, now if you download from github this example code and try it on your machine, it will not send google analytical script to the browser.</p><p>One can use the same method to hide/show login, logout buttons for eg.</p></div></section></div></div>
 
 
       <!-- Example row of columns -->
