change to macupdate banner

--- a/webroot/templates-hidden/default.html
+++ b/webroot/templates-hidden/default.html
@@ -58,12 +58,7 @@
       </div>
 
       
-    </div><div class="col-lg-2"><div class="lift:ActiveIfIsMkrrf"><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- vad1 -->
-<ins class="adsbygoogle" style="display:inline-block;width:120px;height:600px" data-ad-client="ca-pub-5252416090354786" data-ad-slot="5314155155"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script></div></div></div></div>
+    </div><div class="col-lg-2"><div class="lift:ActiveIfIsMkrrf"><script type="text/javascript" src="http://deals.macupdate.com/affilad/14974/120x600"></script></div></div></div></div>
 
 
     <!-- Bootstrap core JavaScript
